2010-06-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/installer/inc/files-documentation.isx: There are
	not currently any JPEG files in the www/images directory to
	distribute.

2010-06-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* ltdl/config/ltmain.sh: Update libtool to 2.2.10.

	* magick/profile.c: Support lcms 2.0.

	* configure.ac: Add support for configuring for lcms 2.0,
	controlled via a new --without-lcms2 option.  By default lcms v2
	is used if it is available, otherwise v1.1X is used if it is
	available.

2010-06-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* ltdl/config/ltmain.sh: Update libtool to 2.2.8.

2010-06-02  Glenn Randers-Pehrson  <glennrp@simple...>

	* coders/png.c correctly scale bKGD chunk data in Q16 build

2010-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/Magick++/Image.rst: Fix documentation error which wrongly
	recommended multiplication by size of PixelPacket.  Correction by
	Roel Baardman.

2010-05-23 Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/txt.c (ReadTXTImage): Ability to read multiple images.

2010-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (DispatchImage): 'K' channel was always
	output as black for "CMYK" specification unless image matte flag
	was True.  Bug report and proposed solution by Lance Brown.

2010-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/shear.c (ShearImage): When one of the shear angles was
	specified as zero, the shear request was ignored entirely.  An
	simple optimization was using || rather than && to test the
	angles.  Resolves SourceForge issue #2991685 "Shear command does
	not handle zero angles correctly".

2010-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (InitializeMagick, DestroyMagick):
	InitializeMagick and DestroyMagick should be fully thread safe.

2010-05-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
